--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -3,5 +3,5 @@
     <string name="app_name">ScanCamera</string>
     <string name="btn">启动扫描服务</string>
     <string name="stop">关闭扫描服务</string>
-    <string name="show_information">把条形码完全取景器内</string>
+    <string name="show_information">把条码完全放入取景器内</string>
 </resources>
